# al-goma

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  claude-res.txt  dishes.toml  list.toml
src/: app.rs  db.rs  items.rs  list.rs  locale.rs  main.rs  render.rs  ui.rs  upload.rs
src/render/: db.rs  main_window.rs  mod.rs  new_list.rs  pop.rs  render_upload.rs  upload.rs
