[package]
name = "al-goma"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1", features = ["derive"], default-features = false }
toml = "0.8"
chrono = "0.4"
postcard = { version = "1", features = ["use-std"] }
dirs = "5.0"
tokio = { version = "1.52.1", features = ["full"]}
yup-oauth2 = "12.1.2"
reqwest = { version = "0.13.3", features = ["json"] }
async-trait = "0.1.89"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
